kubernetes-ingress/nodejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-deployment
  labels:
    app: nodejs-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      containers:
        - name: nodejs-container
          image: node:18
          command: ["node", "-e", "require('http').createServer((req,res)=>res.end('NodeJS App')).listen(3000)"]
          ports:
            - containerPort: 3000
