kubernetes-ingress/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-service
spec:
  selector:
    app: nginx-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
