kubernetes-ingress/nodejs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
spec:
  selector:
    app: nodejs-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
